<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.abousalem.hanginkotlin.view.auth.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/side_primary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hangin"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:fontFamily="@font/gotham_rounded_light"
                android:layout_gravity="center"
                />
    </androidx.appcompat.widget.Toolbar>

    <EditText
            android:id="@+id/registerFirstNameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/gotham_rounded_light"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/registerLastNameET"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
            android:id="@+id/registerLastNameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/last_name"
            android:fontFamily="@font/gotham_rounded_light"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/registerFirstNameET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/registerFirstNameET"
            app:layout_constraintTop_toTopOf="@+id/registerFirstNameET" />

    <EditText
            android:id="@+id/registerEmailET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/gotham_rounded_light"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/registerLastNameET"
            app:layout_constraintStart_toStartOf="@+id/registerFirstNameET"
            app:layout_constraintTop_toBottomOf="@+id/registerFirstNameET" />

    <EditText
            android:id="@+id/registerPhoneNumberET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/gotham_rounded_light"
            android:hint="@string/phone_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/registerEmailET"
            app:layout_constraintStart_toStartOf="@+id/registerEmailET"
            app:layout_constraintTop_toBottomOf="@+id/registerEmailET" />

    <EditText
            android:id="@+id/registerPasswordET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/gotham_rounded_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/registerPhoneNumberET"
            app:layout_constraintStart_toStartOf="@+id/registerPhoneNumberET"
            app:layout_constraintTop_toBottomOf="@+id/registerPhoneNumberET" />

    <EditText
            android:id="@+id/registerConfirmPassET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/gotham_rounded_light"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/registerPasswordET"
            app:layout_constraintStart_toStartOf="@+id/registerPasswordET"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordET" />

    <Button
            android:id="@+id/registerCreateAccountBT"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/back_solid_accent"
            android:fontFamily="@font/gotham_rounded_light"
            android:text="@string/create_account"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/registerConfirmPassET"
            app:layout_constraintStart_toStartOf="@+id/registerConfirmPassET"
            app:layout_constraintTop_toBottomOf="@+id/registerConfirmPassET" />

    <ProgressBar
            android:id="@+id/registerPB"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:translationZ="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
